--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=https://linktr.ee/mmjmanav">
   <title>Redirecting...</title>
+  <script>
+    // Immediately redirect to Linktree
+    window.location.replace("https://linktr.ee/mmjmanav");
+  </script>
 </head>
 <body>
-  <p>Redirecting to <a href="https://linktr.ee/mmjmanav">Linktree</a>...</p>
+  <p>If you are not redirected automatically, <a href="https://linktr.ee/mmjmanav">click here</a>.</p>
 </body>
 </html>
